feat: DeleteProject, UpdateProject
