# api/docs/swagger.json
@@ -38,6 +38,10 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
                     "401": {
                         "description": "Unauthorized"
                     },
@@ -77,6 +81,53 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/{projectId}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "api.v1",
+                    "project"
+                ],
+                "summary": "Update a project",
+                "parameters": [
+                    {
+                        "description": "Project details",
+                        "name": "projectDetails",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/projects.UpdateProjectRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -123,6 +174,10 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -178,6 +233,10 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -247,7 +306,7 @@
                     "api.v1",
                     "project"
                 ],
-                "summary": "Spin down a preview deployment",
+                "summary": "Delete a project",
                 "parameters": [
                     {
                         "type": "integer",
@@ -255,18 +314,15 @@
                         "name": "projectId",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Deployment ID",
-                        "name": "deploymentId",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -324,6 +380,10 @@
                     "204": {
                         "description": "No Content"
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
                     "401": {
                         "description": "Unauthorized"
                     },
@@ -379,6 +439,10 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
                     "401": {
                         "description": "Unauthorized"
                     },
@@ -426,6 +490,10 @@
                                 "$ref": "#/definitions/projects.ListAllProjectsItem"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -590,6 +658,30 @@
                     "type": "boolean"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "projects.UpdateProjectRequest": {
+            "type": "object",
+            "required": [
+                "composePath",
+                "repository"
+            ],
+            "properties": {
+                "composePath": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "repository": {
+                    "type": "string"
+                },
+                "requiresAuthn": {
+                    "type": "boolean"
+                },
+                "username": {
                     "type": "string"
                 }
             }
