# api/handlers/projects/update_project.go
@@ -8,11 +8,13 @@ import (
 	"net/http"
 	"skulpture/buang/app"
 	"skulpture/buang/components/projects"
+	"strconv"
 
+	"github.com/go-chi/chi/v5"
 	"github.com/go-playground/validator/v10"
 )
 
-type CreateProjectRequest struct {
+type UpdateProjectRequest struct {
 	Repository    string  `json:"repository" validate:"required"`
 	RequiresAuthn bool    `json:"requiresAuthn"`
 	Username      *string `json:"username,omitempty" validate:"required_with=Password,required_if=RequiresAuthn true"`
@@ -20,22 +22,29 @@ type CreateProjectRequest struct {
 	ComposePath   string  `json:"composePath" validate:"required"`
 }
 
-// @summary	Create a project
+// @summary	Update a project
 // @tags		api.v1, project
 // @security	ApiKeyAuth
-// @param		projectDetails	body		CreateProjectRequest	true	"Project details"
-// @success	200				{object}	int
-// @failure	400				{object}	any
+// @param		projectDetails	body		UpdateProjectRequest	true	"Project details"
+// @success	204				{object}	nil
 // @failure	401
+// @failure	400	{object}	any
 // @failure	500	{object}	string
-// @router		/project [post]
-func CreateProject(s app.ApplicationServices) http.HandlerFunc {
+// @router		/project/{projectId} [post]
+func UpdateProject(s app.ApplicationServices) http.HandlerFunc {
 	validate := validator.New(validator.WithRequiredStructEnabled())
 
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req CreateProjectRequest
+		projectIdParam := chi.URLParam(r, "projectId")
+		projectId, err := strconv.Atoi(projectIdParam)
+		if err != nil {
+			slog.ErrorContext(r.Context(), "update project", "err", err.Error())
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+		var req UpdateProjectRequest
 
-		err := json.NewDecoder(r.Body).Decode(&req)
+		err = json.NewDecoder(r.Body).Decode(&req)
 		if err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
@@ -58,18 +67,27 @@ func CreateProject(s app.ApplicationServices) http.HandlerFunc {
 			return
 		}
 
-		p := projects.CreateProjectParams(req)
+		p := projects.UpdateProjectParams{
+			ProjectID:     int64(projectId),
+			Repository:    req.Repository,
+			RequiresAuthn: req.RequiresAuthn,
+			Username:      req.Username,
+			Password:      req.Password,
+			ComposePath:   req.ComposePath,
+		}
 
 		res, err := p.Exec(r.Context(), &s)
 		if err != nil {
-			slog.ErrorContext(r.Context(), "create project", "err", err.Error())
+			slog.ErrorContext(r.Context(), "update project", "err", err.Error())
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 		}
 
 		_, err = fmt.Fprintf(w, "%v", res.Id)
 		if err != nil {
-			slog.ErrorContext(r.Context(), "create project", "err", err.Error())
+			slog.ErrorContext(r.Context(), "update project", "err", err.Error())
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 		}
+
+		w.WriteHeader(http.StatusNoContent)
 	}
 }
